--- a/composer.json
+++ b/composer.json
@@ -16,27 +16,28 @@
     ],
     "require": {
         "php": ">=7.3",
-        "genealabs/laravel-pivot-events": "^0.3.0",
-        "illuminate/cache": "^7.0",
-        "illuminate/config": "^7.0",
-        "illuminate/console": "^7.0",
-        "illuminate/container": "^7.0",
-        "illuminate/database": "^7.0",
-        "illuminate/http": "^7.0",
-        "illuminate/support": "^7.0"
+        "genealabs/laravel-pivot-events": "^8.0",
+        "illuminate/cache": "^8.0",
+        "illuminate/config": "^8.0",
+        "illuminate/console": "^8.0",
+        "illuminate/container": "^8.0",
+        "illuminate/database": "^8.0",
+        "illuminate/http": "^8.0",
+        "illuminate/support": "^8.0"
     },
     "require-dev": {
         "doctrine/dbal": "^2.10",
         "fzaninotto/faker": "^1.9",
-        "laravel/nova": "^3.0",
-        "orchestra/testbench-browser-kit": "^5.0",
-        "orchestra/testbench": "^5.0",
+        "laravel/nova": "^3.9",
+        "orchestra/testbench-browser-kit": "^6.0",
+        "orchestra/testbench": "^6.0",
         "php-coveralls/php-coveralls" : "^2.2",
         "phpmd/phpmd": "^2.7",
         "phpunit/phpunit": "^8.0",
         "sebastian/phpcpd": "^5.0",
         "squizlabs/php_codesniffer": "^3.4",
-        "symfony/thanks": "^1.2"
+        "symfony/thanks": "^1.2",
+        "laravel/legacy-factories": "^1.0"
     },
     "autoload": {
         "psr-4": {
