--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,10 @@
 /.github export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
+/.phpcs.xml export-ignore
+/.phpmd.xml export-ignore
+/.phpunit.xml export-ignore
+/.phpunit.xml.dist export-ignore
 /.scrutinizer.yml export-ignore
 /.travis.yml export-ignore
 /build
@@ -10,4 +14,5 @@
 /database.yml export-ignore
 /phpunit.xml export-ignore
 /tests export-ignore
+/tools export-ignore
 /vendor
