--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     "require-dev": {
         "doctrine/dbal": "^3.3",
         "fakerphp/faker": "^1.11",
+        "laravel/nova": "^3.9",
         "orchestra/testbench-browser-kit": "^8.0",
         "orchestra/testbench": "^8.0",
         "php-coveralls/php-coveralls" : "^2.2",
