--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": ">=8.1",
         "genealabs/laravel-pivot-events": "^10.0",
         "illuminate/cache": "^10.0",
         "illuminate/config": "^10.0",
@@ -28,7 +28,7 @@
     "require-dev": {
         "doctrine/dbal": "^3.3",
         "fakerphp/faker": "^1.11",
-        "laravel/nova": "^3.9",
+        "laravel/nova": "^4.0",
         "orchestra/testbench-browser-kit": "^8.0",
         "orchestra/testbench": "^8.0",
         "php-coveralls/php-coveralls" : "^2.2",
