--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [8.2, 8.1]
+        php: [8.3, 8.2, 8.1]
 
     name: PHP ${{ matrix.php }}
 
