--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,16 +22,18 @@
         </testsuite>
     </testsuites>
     <php>
-        <env name="APP_KEY" value="base64:Xgs1LQt1GdVHhD6qyYCXnyq61DE3UKqJ5k2SJc+Nw2g="/>
         <env name="APP_ENV" value="testing"/>
+        <env name="APP_KEY" value="base64:Xgs1LQt1GdVHhD6qyYCXnyq61DE3UKqJ5k2SJc+Nw2g="/>
         <env name="APP_URL" value="http://localhost"/>
         <env name="CACHE_DRIVER" value="redis"/>
-        <env name="SESSION_DRIVER" value="array"/>
-        <env name="QUEUE_DRIVER" value="sync"/>
         <env name="DB_CONNECTION" value="sqlite"/>
         <env name="DB_DATABASE" value=":memory:"/>
-        <env name="REDIS_HOST" value="127.0.0.1"/>
+        <env name="DB_PASSWORD" value="secret"/>
+        <env name="DB_USERNAME" value="homestead"/>
         <env name="PGSQL_HOST" value="127.0.0.1"/>
+        <env name="QUEUE_DRIVER" value="sync"/>
+        <env name="REDIS_HOST" value="127.0.0.1"/>
+        <env name="SESSION_DRIVER" value="array"/>
     </php>
     <source>
         <include>
