--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php": ">=8.1",
-        "genealabs/laravel-pivot-events": "^10.0",
+        "genealabs/laravel-pivot-events": "^10.0|^11.0",
         "illuminate/cache": "^10.0|^11.0",
         "illuminate/config": "^10.0|^11.0",
         "illuminate/console": "^10.0|^11.0",
